[BlinkGenPropertyTrees] Wire up popup painting

This patch fixes two bugs where popups were not painted:
1) Popups were not hooked up because the BGPT/SPV2 AttachRootLayer
function was not implemented on WebPagePopupImpl. This has been
implemented.
2) Popup layers were not painted. Popups are not attached to the
viewport layers and were not found via the recursive paint walk. Popups
are now special-cased so they are painted.

A DCHECK has been added in layer_tree_host to make this sort of bug
easier to debug. Instead of NPE in some random layer code, we now
DCHECK.

Bug: 853951
Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux-blink-gen-property-trees;luci.chromium.try:linux_layout_tests_slimming_paint_v2;master.tryserver.blink:linux_trusty_blink_rel
Change-Id: Ia7bbcd4c27f860ada232d28c89ab672d60995aec
Reviewed-on: https://chromium-review.googlesource.com/1117216
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Commit-Queue: Philip Rogers <pdr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#570960}
Former-commit-id: 0c415398097e11f2ed653e0548b21f9982dee516