third_party/blink/renderer/core/exported/web_page_popup_impl.h
@@ -46,7 +46,6 @@ class Layer;
 namespace blink {
 
 class CompositorAnimationHost;
-class GraphicsLayer;
 class Page;
 class PagePopupChromeClient;
 class PagePopupClient;
@@ -116,7 +115,7 @@ class CORE_EXPORT WebPagePopupImpl final : public WebPagePopup,
   bool InitializePage();
   void DestroyPage();
   void InitializeLayerTreeView();
-  void SetRootGraphicsLayer(GraphicsLayer*);
+  void SetRootLayer(cc::Layer*);
 
   WebRect WindowRectInScreen() const;
 
@@ -129,7 +128,6 @@ class CORE_EXPORT WebPagePopupImpl final : public WebPagePopup,
 
   WebLayerTreeView* layer_tree_view_ = nullptr;
   scoped_refptr<cc::Layer> root_layer_;
-  GraphicsLayer* root_graphics_layer_ = nullptr;
   std::unique_ptr<CompositorAnimationHost> animation_host_;
   bool is_accelerated_compositing_active_ = false;
 
